--- a/examples/example_control/CMakeLists.txt
+++ b/examples/example_control/CMakeLists.txt
@@ -13,11 +13,13 @@ file(GLOB_RECURSE PROJECT_SOURCE
 )
 
 # make the executable
-cs_add_executable(single_vehicle src/single_vehicle.cpp src/trajectory/trajectory.cpp)
-cs_add_executable(multi_vehicle src/multi_vehicle.cpp src/trajectory/trajectory.cpp)
-cs_add_executable(single_vehicle_and_rgb_camera src/single_vehicle_and_rgb_camera.cpp src/trajectory/trajectory.cpp)
-cs_add_executable(single_vehicle_and_stereo_camera src/single_vehicle_and_stereo_camera.cpp src/trajectory/trajectory.cpp)
-cs_add_executable(multi_vehicle_and_rgb_camera src/multi_vehicle_and_rgb_camera.cpp src/trajectory/trajectory.cpp)
+cs_add_executable(single_vehicle src/single_vehicle.cpp src/trajectory/fig8_trajectory.cpp)
+cs_add_executable(multi_vehicle src/multi_vehicle.cpp src/trajectory/fig8_trajectory.cpp)
+cs_add_executable(single_vehicle_and_rgb_camera src/single_vehicle_and_rgb_camera.cpp src/trajectory/fig8_trajectory.cpp)
+cs_add_executable(single_vehicle_and_stereo_camera src/single_vehicle_and_stereo_camera.cpp src/trajectory/fig8_trajectory.cpp)
+cs_add_executable(multi_vehicle_and_rgb_camera src/multi_vehicle_and_rgb_camera.cpp src/trajectory/fig8_trajectory.cpp)
+cs_add_executable(single_vehicle_heading_controller src/single_vehicle_heading_controller.cpp src/heading_controller/heading_controller.cpp)
+
 
 # link the executable to the necessary libraries
 target_link_libraries(single_vehicle
@@ -32,6 +34,7 @@ target_link_libraries(multi_vehicle
   zmq
   zmqpp
 )
+
 # link the executable to the necessary libraries
 target_link_libraries(single_vehicle_and_rgb_camera
         ${catkin_LIBRARIES}
@@ -50,5 +53,12 @@ target_link_libraries(multi_vehicle_and_rgb_camera
         zmq
         zmqpp
         )
+# link the executable to the necessary libraries
+target_link_libraries(single_vehicle_heading_controller
+        ${catkin_LIBRARIES}
+        zmq
+        zmqpp
+        )
+
 
 cs_install()
