--- a/rpgq_simulator/package.xml
+++ b/rpgq_simulator/package.xml
@@ -15,6 +15,7 @@
   <depend>dvs_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>rosgraph_msgs</depend>
+  <depend>rpgq_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>image_transport</depend>
   <depend>assimp_catkin</depend>
