fixed demo with setting the position

--- a/examples/example_control/package.xml
+++ b/examples/example_control/package.xml
@@ -18,5 +18,11 @@
     <depend>quadrotor_common</depend>
     <depend>quadrotor_msgs</depend>
     <depend>polynomial_trajectories</depend>
+    <depend>std_msgs</depend>
+    <depend>geometry_msgs</depend>
+    <depend>nav_msgs</depend>
+    <depend>tf</depend>
+    <depend>tf_conversions</depend>
+    <depend>eigen_conversions</depend>
 
 </package>
