--- a/examples/example_control/CMakeLists.txt
+++ b/examples/example_control/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required(VERSION 2.8.3)
 project(example_control)
 
 find_package(catkin_simple REQUIRED)
-catkin_simple()
+catkin_simple(
+        std_msgs
+        geometry_msgs
+        nav_msgs
+        tf
+        tf_conversions
+        eigen_conversions
+)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 
