--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -19,4 +19,12 @@ repositories:
     type: git
     url: git@github.com:uzh-rpg/rpg_quadrotor_control.git
     version: master
+  rotors_simulator:
+    type: git
+    url: git@github.com:ethz-asl/rotors_simulator.git
+    version: master
+  mav_comm:
+    type: git
+    url: git@github.com:ethz-asl/mav_comm.git
+    version: master
 
