big change, rename example files, create camera control example.

--- a/examples/example_control/CMakeLists.txt
+++ b/examples/example_control/CMakeLists.txt
@@ -3,12 +3,12 @@ project(example_control)
 
 find_package(catkin_simple REQUIRED)
 catkin_simple(
-        std_msgs
-        geometry_msgs
-        nav_msgs
-        tf
-        tf_conversions
-        eigen_conversions
+  std_msgs
+  geometry_msgs
+  nav_msgs
+  tf
+  tf_conversions
+  eigen_conversions
 )
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
@@ -19,59 +19,67 @@ file(GLOB_RECURSE PROJECT_SOURCE
     "*.cpp"
 )
 
+cs_add_library(fig8_trajectory
+  src/trajectory/fig8_trajectory.cpp)
+
 # make the executable
-cs_add_executable(single_vehicle src/single_vehicle.cpp src/trajectory/fig8_trajectory.cpp)
-cs_add_executable(multi_vehicle src/multi_vehicle.cpp src/trajectory/fig8_trajectory.cpp)
-cs_add_executable(single_vehicle_and_rgb_camera src/single_vehicle_and_rgb_camera.cpp src/trajectory/fig8_trajectory.cpp)
-cs_add_executable(single_vehicle_and_stereo_camera src/single_vehicle_and_stereo_camera.cpp src/trajectory/fig8_trajectory.cpp)
-cs_add_executable(multi_vehicle_and_rgb_camera src/multi_vehicle_and_rgb_camera.cpp src/trajectory/fig8_trajectory.cpp)
-cs_add_executable(single_vehicle_heading_controller src/single_vehicle_heading_controller.cpp src/heading_controller/heading_controller.cpp)
-cs_add_executable(single_vehicle_and_rgb_camera_trajectory_with_waypoints src/single_vehicle_and_rgb_camera_trajectory_with_waypoints.cpp)
-
-
-# link the executable to the necessary libraries
-target_link_libraries(single_vehicle
-        ${catkin_LIBRARIES}
-        zmq
-        zmqpp
-)
+cs_add_executable(quad 
+  src/quad.cpp )
+cs_add_executable(multi_quad
+  src/multi_quad.cpp)
+cs_add_executable(quad_with_camera
+  src/quad_with_camera.cpp)
+cs_add_executable(quad_with_stereo_camera 
+  src/quad_with_stereo_camera.cpp )
+cs_add_executable(multi_quad_with_camera 
+  src/multi_quad_with_camera.cpp)
 
 # link the executable to the necessary libraries
-target_link_libraries(multi_vehicle
+target_link_libraries(quad
   ${catkin_LIBRARIES}
+  fig8_trajectory
   zmq
   zmqpp
 )
 
 # link the executable to the necessary libraries
-target_link_libraries(single_vehicle_and_rgb_camera
-        ${catkin_LIBRARIES}
-        zmq
-        zmqpp
-        )
+target_link_libraries(multi_quad
+  ${catkin_LIBRARIES}
+  fig8_trajectory
+  zmq
+  zmqpp
+)
+
 # link the executable to the necessary libraries
-target_link_libraries(single_vehicle_and_stereo_camera
-        ${catkin_LIBRARIES}
-        zmq
-        zmqpp
-        )
+target_link_libraries(quad_with_camera
+  ${catkin_LIBRARIES}
+  fig8_trajectory
+  zmq
+  zmqpp
+)
 # link the executable to the necessary libraries
-target_link_libraries(multi_vehicle_and_rgb_camera
-        ${catkin_LIBRARIES}
-        zmq
-        zmqpp
-        )
+target_link_libraries(quad_with_stereo_camera
+  ${catkin_LIBRARIES}
+  fig8_trajectory
+  zmq
+  zmqpp
+)
 # link the executable to the necessary libraries
-target_link_libraries(single_vehicle_heading_controller
-        ${catkin_LIBRARIES}
-        zmq
-        zmqpp
-        )
-# link the executable to the necessary libraries
-target_link_libraries(single_vehicle_and_rgb_camera_trajectory_with_waypoints
-        ${catkin_LIBRARIES}
-        zmq
-        zmqpp
-        )
+target_link_libraries(multi_quad_with_camera
+  ${catkin_LIBRARIES}
+  fig8_trajectory
+  zmq
+  zmqpp
+)
+
+if (catkin_LIBRARIES MATCHES "polynomial_trajectories")
+  cs_add_executable(quad_waypoints 
+    src/quad_waypoints.cpp)
+  # link the executable to the necessary libraries
+  target_link_libraries(quad_waypoints
+    ${catkin_LIBRARIES}
+    zmq
+    zmqpp)
+endif(catkin_LIBRARIES MATCHES "polynomial_trajectories")
 
 cs_install()
